Fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,25 @@
-.App {
+html {
+  background-color: #282c34;
+}
+
+body,
+.title,
+.label {
+  color: white;
+}
+.title {
+  margin: 20px 0;
+}
+.field {
+  margin: 0 10px;
+}
+
+.title {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #09d3ac;
 }
